[tool.poetry]
name = "py-lsmtree"
version = "0.1.0"
description = ""
authors = ["Ryan Siemens <ryan.siemens@zapier.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
